--- a/public/style.css
+++ b/public/style.css
@@ -64,11 +64,83 @@ body{
 	margin-top: 50px;
 }
 
+/* ARTIST INPUT */
+#containerArtistInput{
+	height: 35px;
+	width: 250px;
+	position: absolute;
+	left: 10%;
+	top: 10%;
+	transform: translateY(-50%);
+	/* transition: height 1s, width 1s, left 1s, top 1s, transform 1s, ease; */
+	transition: all .4s ease;
+	z-index: 1;
+}
+
+#containerArtistInput.waiting{
+	height: 55px;
+	width: 350px;
+	z-index:2; 
+	left: 50%;
+	top: 30%;
+	transform: translate(-50%, -50%);
+	font-size: 30px;
+}
+
+#artistNameInput{
+	width: 100%;
+	height: 100%;
+	border: none;
+	border-radius: 10px;
+	text-align: left;
+	padding-left: 20px;
+	font-size: inherit;
+}
+
+
+#findArtistBtn{
+	height: 100%;
+	width: 40px;
+	position: absolute;
+	right: 3%;
+	top: 50%;
+	transform: translateY(-50%);
+}
+
+#findArtistBtn > i{
+	font-size: 23px;
+	color: green;
+	transition: color 0.5s;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+/* SCELTA SBAGLIATA/CORRETTA */
+
+#sceltaSbagliata{
+	font-size: 25px;	
+	color: white;
+	color: red;
+	transition: opacity 0.5s ease;
+}
+
+#sceltaSbagliata:not(.visible){
+	display: none;
+}
+
+#sceltaSbagliata.visible{
+	animation: disappearText 1s 1;
+	animation-fill-mode: forwards;
+}
+
 /* COVER ALBUM */
 #imgAlbum{
 	height: 400px;
 	width: auto;
 	margin-top: 200px;
+	transition: all 0.5s ease;
 }
 
 /* PULSANTI/INPUT */
@@ -101,7 +173,7 @@ body{
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
-	transition: border 1s;
+	transition: border 1s ease;
 }
 
 #submitBtn{right: 15%}
@@ -117,48 +189,25 @@ body{
 	position: absolute;
 	right: 50%;
 	bottom: 50%;
-	font-size: 30px;
 	transform: translate(50%, 50%);
-	transition: color 0.5s;
+	font-size: 30px;
+	transition: color 0.5s ease;
 }
 
-#containerArtistInput{
-	height: 80px;
-	width: 250;
-	position: absolute;
-	left: 10%;
-	top: 50%;
-	transform: translateY(-50%);
-}
-
-#artistNameInput{
-	width: 200px;
-	height: 40px;
-	border: none;
-	border-radius: 10px;
-}
-
-#findArtistBtn{
-	height: 40px;
-	width: 40px;
-	border-radius: 50%;
-	line-height: 40px;
-	color: black;
-	transition: width 0.1s;
-	display: inline-block;
-}
-
-#findArtistBtn > i{
-	font-size: 23px;
-	color: green;
-	transition: color 0.5s;
-	margin: auto;
-	position: relative;
-	top: 3px;
-}
 
 #submitBtn>i:hover,
 #findArtistBtn>i:hover{color: blue}
 
 #videoPlayer{display: none;}
 
+@keyframes disappearText{
+    0% {
+		opacity: 100%;
+	}
+    50% {
+		opacity: 50%;
+	}
+    100% {
+		opacity: 0%;
+	}
+}
